umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_hf+4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Hf#c+4"] :bonds [] :charge 4 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["Hf#c+4"] :bonds [] :charge 4 :spin "#u0 #s1"}}}
