umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_hg+2_dimer.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["Hg#c+#n5#v" "Hg#c+#n5#v"]
      :bonds [[0 1 :single]]
      :charge 2
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["Hg#c+#n5#v" "Hg#c+#n5#v"]
      :bonds [[0 1 :single]]
      :charge 2
      :spin "#u0#s1"}
    :success true}}
