umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_in+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["In#c+3"] :bonds [] :charge 3 :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {:atoms ["In#c+3"] :bonds [] :charge 3 :spin "#u0 #s1"}
    :success true}}
